# oed

./: .pre-commit-config.yaml  README.md  TESTING.py  TESTING2.py  TODO.md  requirements.txt  setup.cfg  setup.py
benchmarking/: benchmarking.py
benchmarking/interfaces/: blackbox_model.py
designs_of_experiments/design_library/: d_design.py  latin_hypercube.py  minimum_entry_of_CRLB_design.py  pi_design.py  random.py
designs_of_experiments/interfaces/: design_of_experiment.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme_link.html  search.html  searchindex.js  src.benchmarking.html  src.experiments.experiment_library.html  src.experiments.html  src.experiments.interfaces.html  src.html  src.metrics.error_functions.html  src.metrics.html  src.metrics.interfaces.html  src.metrics.metric_library.html  src.minimizer.html  src.minimizer.interfaces.html  src.minimizer.minimizer_library.html  src.parametric_function_library.html  src.parametric_function_library.interfaces.html  src.statistical_models.html  src.statistical_models.interfaces.html  src.statistical_models.statistical_model_library.html  src.visualization.html
examples/: aging_model_pipeline.py  polynomial_model_pipeline.py  uncertainty_model_pipeline.py
notebooks/: README.md  paper.ipynb  pi_workflow_example.ipynb  template.ipynb
parametric_function_library/: aging_model_Naumann.py  linear_function.py
pipeline/: TESTING.py  TESTING2.py  aging_model_naumann_pipeline.py
src/: working_tree.md
visualization/: create_dashboard.py  plotting_functions.py
(+143 files in other folders)
