[metadata]
name = oed
version = 0.0.1
license = MIT
description = Package for experimental designs
long_description = file: README.md
author = Nico Palm
author_email = nicolaipalm@googlemail.com
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning


[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy~=1.22.3
    plotly~=5.7.0
    scipy~=1.8.0
    pandas~=1.4.2
    tqdm~=4.64.0
    sklearn~=0.0
    scikit-learn~=1.0.2
    flake8~=4.0.1
    black~=22.3.0
    pre-commit~=2.18.1
    autopep8~=1.6.0
    isort~=5.10.1

[options.packages.find]
where=src